// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Option component Can render custom option 1`] = `
<li
  className="row"
  role="menuitem"
>
  <x-custom-element />
</li>
`;

exports[`Test Option component Option can be highlighted 1`] = `
<li
  className="row"
  role="menuitem"
>
  <button
    className="option is-highlighted"
    disabled={false}
    onMouseDown={[Function]}
    tabIndex={0}
    value="foo"
  >
    Foo
  </button>
</li>
`;

exports[`Test Option component Option can be selected 1`] = `
<li
  className="row"
  role="menuitem"
>
  <button
    className="option is-selected"
    disabled={false}
    onMouseDown={[Function]}
    tabIndex={0}
    value="foo"
  >
    Foo
  </button>
</li>
`;

exports[`Test Option component Renders value element 1`] = `
<li
  className="row"
  role="menuitem"
>
  <button
    className="option"
    disabled={false}
    onMouseDown={[Function]}
    tabIndex={0}
    value="foo"
  >
    Foo
  </button>
</li>
`;
